DevTools: Fix CPU page becoming unresponsive with timeline CPU throttling on Win

BUG=643127

Review-Url: https://codereview.chromium.org/2400363002
Cr-Commit-Position: refs/heads/master@{#424021}

Former-commit-id: ed96d750e94db5c11d44b987d7a1995a46f69fb4